--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "dictionary",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000",
   "dependencies": {
     "axios": "^0.19.1",
+    "formik": "^2.1.4",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "yup": "^0.28.5"
   },
   "scripts": {
     "start": "react-scripts start",
